syntax = "proto3";
package org.example.grpc;

import "google/protobuf/empty.proto";

enum Genre {
  FICTION = 0;
  NON_FICTION = 1;
  SCIENCE = 2;
  HISTORY = 3;
  FANTASY = 4;
}

message Book {
  string title = 1;
  int32 year = 2;
  Genre genre = 3;
}

service LibraryService {

  rpc getAllBooks (google.protobuf.Empty) returns (stream Book);

  rpc addBook (Book) returns (Book);

  rpc updateBook (Book) returns (Book);

  rpc deleteBook (Book) returns (google.protobuf.Empty);
}